fix overflow-x scroll

--- a/sass/_reboot.scss
+++ b/sass/_reboot.scss
@@ -14,6 +14,8 @@ body {
     background: var(--color-light);
     color: var(--color-dark);
     margin: 0;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
 a, p, span, div, h1, h2, h3, h4, h5, h6 {
