--- a/sass/layouts/_navbar.scss
+++ b/sass/layouts/_navbar.scss
@@ -17,6 +17,7 @@
 
         .navbar-toggler {
             border: none;
+            padding: 0;
 
             &:focus {
                 box-shadow: none;
